做提交功能，微信小程序没有<li>真坑，研究怎么加边框，再研究事件没触发，这是一个个列出来的，考虑用page.data输出

--- a/app.json
+++ b/app.json
@@ -5,7 +5,9 @@
     "pages/hot/hot",
     "pages/profile/profile",
     "pages/recipeList/recipeList",
-    "pages/recipe/recipe"
+    "pages/recipe/recipe",
+    "pages/mine/mine"
+
   ],
   "window": {
     "navigationBarBackgroundColor": "#35495e",
@@ -44,7 +46,14 @@
         "pagePath": "pages/profile/profile",
         "iconPath": "images/profile.png",
         "selectedIconPath": "images/profile-actived.png"
+      },
+      {
+        "text": "我",
+        "pagePath": "pages/mine/mine",
+        "iconPath": "images/board.png",
+        "selectedIconPath": "images/board-actived.png"
       }
+
     ]
   },
   "networkTimeout": {
