编辑了视频提交的界面，css样式很low，提交了title和url，定义了两个开关，用自定义属性分别判断，text。length，只有在两个开关都true的情况下，才能点击提交按钮。遇到了form的坑，事件bindsubmit绑定。按钮disabled属性中写三元表达式。 正则表达式 过滤空格

--- a/app.json
+++ b/app.json
@@ -6,7 +6,8 @@
     "pages/profile/profile",
     "pages/recipeList/recipeList",
     "pages/recipe/recipe",
-    "pages/mine/mine"
+    "pages/mine/mine",
+    "pages/sub/sub"
 
   ],
   "window": {
