取消了投稿等页面，换成了收藏的页面，和home的页面一样。之前一直纠结怎么根据登陆信息判断。其实直接根据结果判断。av.could.run()的解构，其他没有改变，{sort:'favorite',term:objectId,l:5,p:0,ex:''}。有一个bug，收藏按钮，在页面重新加载后恢复原样。在服务器端有isFav方法，传id，返回true或false。我总算看到了后端和前端的区别，后端返回，前端根据返回值操作。store是收藏

--- a/app.json
+++ b/app.json
@@ -3,11 +3,9 @@
     "pages/home/home",
     "pages/search/search",
     "pages/hot/hot",
-    "pages/profile/profile",
     "pages/recipeList/recipeList",
     "pages/recipe/recipe",
-    "pages/mine/mine",
-    "pages/sub/sub"
+    "pages/store/store"
 
   ],
   "window": {
@@ -44,16 +42,11 @@
       },
       {
         "text": "我的",
-        "pagePath": "pages/profile/profile",
+        "pagePath": "pages/store/store",
         "iconPath": "images/profile.png",
         "selectedIconPath": "images/profile-actived.png"
-      },
-      {
-        "text": "我",
-        "pagePath": "pages/mine/mine",
-        "iconPath": "images/board.png",
-        "selectedIconPath": "images/board-actived.png"
       }
+
 
     ]
   },
