--- a/app.json
+++ b/app.json
@@ -25,8 +25,8 @@
       {
         "text": "首页",
         "pagePath": "pages/home/home",
-        "iconPath": "images/board.png",
-        "selectedIconPath": "images/board-actived.png"
+        "iconPath": "images/home.png",
+        "selectedIconPath": "images/home-actived.png"
       },
       {
         "text": "搜索",
